--- a/charity-org/src/main/resources/templates/courier-dashboard.html
+++ b/charity-org/src/main/resources/templates/courier-dashboard.html
@@ -12,6 +12,8 @@
     </style>
 </head>
 <body>
+<!-- navbar.html -->
+<div th:replace="fragments/navbar :: navbar(role=${role})"></div>
 <div class="container mt-5">
     <h2>Courier Dashboard</h2>
 
