--- a/charity-org/src/main/resources/templates/ListEventsView.html
+++ b/charity-org/src/main/resources/templates/ListEventsView.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
+<!-- navbar.html -->
+<div th:replace="fragments/navbar :: navbar(role=${role})"></div>
+
 <div class="container mt-5">
     <h2 class="text-center mb-4">Event List</h2>
 
