--- a/charity-org/src/main/resources/templates/VisaView.html
+++ b/charity-org/src/main/resources/templates/VisaView.html
@@ -79,7 +79,7 @@
 </head>
 
 <body>
-<div class="container d-flex justify-content-center align-items-center vh-100">
+<div class="container d-flex justify-content-center align-items-center vh-100" style="margin-top: 50px; margin-bottom: 50px">
     <div class="row w-100">
         <div class="col-md-8 offset-md-2">
             <div class="form-container">
