--- a/charity-org/src/main/resources/templates/events.html
+++ b/charity-org/src/main/resources/templates/events.html
@@ -14,7 +14,7 @@
 <body>
 <!-- navbar.html -->
 <!-- navbar.html -->
-<div th:replace="fragments/navbar :: navbar(role=${role})"></div>
+<div th:replace="fragments/navbar :: navbar(role=${role},userID=${userID})"></div>
 
 <div class="container mt-5">
     <h2 class="mb-4">Event List</h2>
