--- a/charity-org/src/main/resources/templates/HomePage.html
+++ b/charity-org/src/main/resources/templates/HomePage.html
@@ -77,7 +77,7 @@
     </style>
 </head>
 <!-- navbar.html -->
-<div th:replace="fragments/navbar :: navbar(role=${role})"></div>
+<div th:replace="fragments/navbar :: navbar(role=${role},userID=${userID})"></div>
 <body>
 
 
