--- a/charity-org/src/main/resources/templates/courier-dashboard.html
+++ b/charity-org/src/main/resources/templates/courier-dashboard.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- navbar.html -->
-<div th:replace="fragments/navbar :: navbar(role=${role})"></div>
+<div th:replace="fragments/navbar :: navbar(role=${role},userID=${userID})"></div>
 <div class="container mt-5">
     <h2>Courier Dashboard</h2>
 
