--- a/charity-org/src/main/resources/templates/fragments/navbar.html
+++ b/charity-org/src/main/resources/templates/fragments/navbar.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <style>
         .navbar {
+
             background-color: #343a40; /* Dark background */
         }
         .navbar-brand {
@@ -20,8 +21,6 @@
         .navbar .btn:hover {
             background-color: #495057;
         }
-        .card { margin-bottom: 1rem; }
-        .card-body { padding: 1.5rem; }
         .event-actions button { margin-right: 10px; }
 
     </style>
@@ -29,7 +28,7 @@
 <body>
 
 <!-- Navbar Fragment -->
-<div th:fragment="navbar(role)">
+<div th:fragment="navbar(role,userID)">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Nonprofit Organization</a>
@@ -61,7 +60,7 @@
                         <a th:href="@{/user/donations/{id}(id=1)}" class="btn btn-primary me-3">My Donations</a>
                     </li>
                     <li class="nav-item">
-                        <a th:href="@{/user/events/{id}(id=1)}" class="btn btn-primary me-3">My Events</a>
+                        <a th:href="@{/user/events/{id}(id=${userID})}" class="btn btn-primary me-3">My Events</a>
                     </li>
                     <li class="nav-item">
                         <a th:href="@{/auth/logout}" class="btn btn-primary me-3">Log out</a>
