--- a/charity-org/src/main/resources/templates/superadmin_dashboard.html
+++ b/charity-org/src/main/resources/templates/superadmin_dashboard.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" th:href="@{/super_admin/list-couriers}">Couriers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/logout}">Logout</a>
+                    <a class="nav-link" th:href="@{/auth/logout}">Logout</a>
                 </li>
             </ul>
         </div>
