--- a/charity-org/src/main/resources/templates/HomePage.html
+++ b/charity-org/src/main/resources/templates/HomePage.html
@@ -110,7 +110,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Donation Page</h5>
                     <p class="card-text">Support us by making a donation and changing lives today.</p>
-                    <button class="btn btn-success" onclick="location.href='/donate'">Donate Now</button>
+                    <button class="btn btn-success" onclick="location.href='/donation-types/'">Donate Now</button>
                 </div>
             </div>
         </div>
