--- a/charity-org/src/main/resources/templates/HomePage.html
+++ b/charity-org/src/main/resources/templates/HomePage.html
@@ -83,6 +83,7 @@
 
 <!-- Hero Section -->
 <div class="hero">
+    <img src="https://students.1fbusa.com/hubfs/25%20Ways%20to%20Volunteer%20in%20Your%20Community.jpg" alt="Hero Background">
     <div>
         <h1>Welcome</h1>
         <p>Making a difference, one step at a time</p>
