--- a/charity-org/src/main/resources/templates/ListEventsView.html
+++ b/charity-org/src/main/resources/templates/ListEventsView.html
@@ -46,11 +46,15 @@
             <td th:text="${event.eventLocation.name}"></td>
             <td th:text="${event.description}"></td>
             <td>
-                <form th:action="@{/event-registration/registerEvent}" method="post" onsubmit="disableButton(this)">
+                <form th:action="@{/event-registration/registerEvent}" method="post" >
                     <input type="hidden" th:name="event.id" th:value="${event.id}" />
-                    <button type="submit" class="btn btn-primary btn-sm">Register</button>
+                    <button type="submit" class="btn btn-primary btn-sm"  th:disabled="${event.eventDate != null and event.eventDate.before(#dates.createNow())}">Register</button>
                 </form>
+<!--                <button type="button" class="btn btn-secondary btn-sm"  >-->
+<!--                    Registration Closed-->
+<!--                </button>-->
             </td>
+
         </tr>
         <tr th:if="${events.isEmpty()}">
             <td colspan="5" class="text-center">No events found</td>
