--- a/charity-org/src/main/resources/templates/courier-dashboard.html
+++ b/charity-org/src/main/resources/templates/courier-dashboard.html
@@ -48,7 +48,7 @@
             <td th:text="${#dates.format(assignment.donation.date, 'dd MMM yyyy')}"></td>
             <td th:text="${assignment.donation.time}"></td>
             <td th:text="${assignment.donation.donationTotalPrice}"></td>
-            <td th:text="${assignment.donation.status}"></td>
+            <td th:text="${assignment.donation.displayDonationStatus()}"></td>
             <td>
                 <form th:action="@{/courier/complete/{donationId}(donationId=${assignment.donation.id})}" method="post" style="display:inline-block;">
                     <button type="submit" class="btn btn-success">Mark as Completed</button>
@@ -80,7 +80,7 @@
             <td th:text="${#dates.format(donation.date, 'dd MMM yyyy')}"></td>
             <td th:text="${donation.time}"></td>
             <td th:text="${donation.donationTotalPrice}"></td>
-            <td th:text="${donation.status}"></td>
+            <td th:text="${donation.displayDonationStatus()}"></td>
             <td>
                 <form th:action="@{/courier/assign/{donationId}(donationId=${donation.id})}" method="post">
                     <button type="submit" class="btn btn-primary">Assign</button>
