--- a/charity-org/src/main/resources/templates/courier-dashboard.html
+++ b/charity-org/src/main/resources/templates/courier-dashboard.html
@@ -90,6 +90,31 @@
         </tr>
         </tbody>
     </table>
+    <!-- Section: Completed Assignments -->
+    <div class="section-title">
+        <h3>Completed Assignments</h3>
+    </div>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Donor Name</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Total Price</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="completedAssignment, iterStat : ${completedAssignments}">
+            <td th:text="${iterStat.index + 1}"></td>
+            <td th:text="${completedAssignment.donation.user.name}"></td>
+            <td th:text="${#dates.format(completedAssignment.donation.date, 'dd MMM yyyy')}"></td>
+            <td th:text="${completedAssignment.donation.time}"></td>
+            <td th:text="${completedAssignment.donation.donationTotalPrice}"></td>
+        </tr>
+        </tbody>
+    </table>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
