--- a/charity-org/src/main/resources/templates/MoneyDonationView.html
+++ b/charity-org/src/main/resources/templates/MoneyDonationView.html
@@ -103,6 +103,7 @@
         <div class="text-center mt-4">
             <button type="submit" class="btn btn-paypal" onclick="setPaymentMethod('PayPalView')">Pay with PayPal</button>
             <button type="submit" class="btn btn-visa" onclick="setPaymentMethod('VisaView')">Pay with Visa</button>
+            <button type="submit" class="btn btn-paypal" onclick="setPaymentMethod('redirect:/paymob/save')">Pay with Paymob</button>
             <button type="submit" class="btn btn-cash" onclick="setPaymentMethod('Cash')">Pay with Cash</button>
         </div>
     </form>
