--- a/charity-org/src/main/resources/templates/MoneyDonationView.html
+++ b/charity-org/src/main/resources/templates/MoneyDonationView.html
@@ -92,7 +92,11 @@
             <label for="currency">Currency:</label>
             <select id="currency" th:field="*{currency}" class="form-control" required>
                 <option value="" disabled selected>Select Currency</option>
-                <option th:each="currency : ${currencies}" th:value="${currency.name()}" th:text="${currency.name()}"></option>
+                <option th:each="curr : ${currencies}"
+                        th:value="${curr.id}"
+                        th:text="${curr.code + ' - ' + curr.name}">
+                    USD - US Dollar
+                </option>
             </select>
         </div>
 
