Integrated Donation with Payment

--- a/charity-org/src/main/resources/templates/ClothesReceipt.html
+++ b/charity-org/src/main/resources/templates/ClothesReceipt.html
@@ -75,6 +75,7 @@
         <p><strong>Season:</strong>
             <span th:text="${clothesDonnation.season}">Winter</span>
         </p>
+        <p><strong>Invoice Description:</strong> <span th:text="${donationDetails.donation_invoice_Description}">Charitable Contribution</span></p>
     </div>
 
     <div class="total">
