--- a/charity-org/src/main/resources/templates/BloodReceipt.html
+++ b/charity-org/src/main/resources/templates/BloodReceipt.html
@@ -63,6 +63,7 @@
         <p><strong>Donator Age:</strong> <span th:text="${bloodDonnation.donatorAge}">30</span></p>
         <p><strong>Blood Type:</strong> <span th:text="${bloodDonnation.bloodType}">O_POSITIVE</span></p>
         <p><strong>Amount Donated (in Liters):</strong> <span th:text="${bloodDonnation.bloodAmount}">0.5</span></p>
+        <p><strong>Invoice Description:</strong> <span th:text="${donationDetails.donation_invoice_Description}">Charitable Contribution</span></p>
     </div>
 
     <div class="total">
